--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -12,5 +12,16 @@
 }
 
 .container {
-  width: 600px;
+  max-width: 80%;
+  max-height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container img {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  margin: auto;
 }
